--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 anyhow = "1.0.95"
 clap = { version = "4.5.25", features = ["derive"] }
 hex = "0.4.3"
-rsa = "0.9.7"
+rsa = { version = "0.9.7", features = ["default", "serde"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 sha3 = "0.10.8"
