--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.95"
+base64 = "0.22.1"
 clap = { version = "4.5.25", features = ["derive"] }
 hex = "0.4.3"
 rsa = { version = "0.9.7", features = ["default", "serde"] }
