--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.95"
 base64 = "0.22.1"
 clap = { version = "4.5.25", features = ["derive"] }
 hex = "0.4.3"
+rand = "0.8.5"
 rsa = { version = "0.9.7", features = ["default", "serde"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
